<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.bgenius.jf_android_java_demos.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/main_btn1"
        android:id="@+id/button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn2"
        android:id="@+id/button2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn3"
        android:id="@+id/button3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn4"
        android:id="@+id/button4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn5"
        android:id="@+id/button5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn6"
        android:id="@+id/button6" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn7"
        android:id="@+id/button7" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn8"
        android:id="@+id/button8" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn9"
        android:id="@+id/button9" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn10"
        android:id="@+id/button10" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_alignParentStart="true"
        android:text="@string/main_btn11"
        android:id="@+id/button11" />
</RelativeLayout>
